# project-launch-blueprint

./: .coveragerc  .gitignore  README.md  SKILL.md  build_backend.py  cli-architecture.md  command-reference.md  index.md  pyproject.toml  sitecustomize.py  template-spec.md  workflow-state.md
adr/: 0001-materialize-project-documentation.md  0002-stage-prompt-bundle-and-isolated-worker.md  0003-discovery-input-precheck-and-closed-world-init.md  0004-unified-cli-and-natural-language-routing.md  0005-domain-stage-boundary-and-approved-inputs.md  0006-state-stage-lifecycle-and-state-machine-boundary.md  0007-api-stage-contract-synthesis-and-validation.md  0008-design-stage-system-contract-and-review-fence.md  0009-slice-stage-vertical-integration-and-execution-order.md  0010-gates-stage-release-fence-before-implementation.md  0011-discovery-file-inventory-and-coverage-matrix.md  0012-domain-input-inventory-and-coverage-matrix.md  0013-freeze-first-inventory-first-verify-second-methodology.md  0014-coverage-driven-development-and-explicit-invariants.md  README.md
agents/: openai.yaml
api-contract/: checklist.md  example-output.md  index.md  method.md  output-schema.md  prompt-templates.md  validation-rules.md
design-system/: checklist.md  example-output.md  index.md  method.md  output-schema.md  prompt-templates.md  validation-rules.md
discovery/: checklist.md  example-output.md  index.md  method.md  output-schema.md  prompt-templates.md  validation-rules.md
docs/: index.md  step-00-command-plan.md  step-01-skill-installation-and-artifact-contract.md  (+5 more)
(+85 files in other folders)
