[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "plb"
version = "0.1.0"
description = "Project Launch Blueprint CLI scaffold"
readme = "records/project-launch-blueprint/README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
]

[project.scripts]
plb = "plb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
